shoAllPopup fixed overflowing height

--- a/src/sass/components/showAllPopup/_showAllPopup.scss
+++ b/src/sass/components/showAllPopup/_showAllPopup.scss
@@ -16,8 +16,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 50vw;
-    height: 50vw;
+    width: 50%;
+    height: 50%;
     background-color: rgba($color: $inputBgc, $alpha: 1);
     border-radius: 8px;
     padding: 5%;
